# container-manager

./: .dockerignore  .env.example  .env.release.example  .gitignore  README.md  RELEASE_CHECKLIST.md  docker-compose.release.yml  docker-compose.yml  test-websocket.html
backend/: .dockerignore  .env.example  .eslintrc.cjs  .gitignore  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  package.json  pyproject.toml  tsconfig.json
backend/app/: config.py  main.py  models.py  security.py
backend/app/services/: __init__.py  auth_service.py  docker_service.py  system_stats.py  terminal_service.py  tunnel_service.py
backend/app/utils/: __init__.py  errors.py  http.py  logger.py
backend/containermaster_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/scripts/: deploy.sh  wait-for-health.sh
backend/src/: index.ts
backend/src/api/controllers/: auth.controller.ts  containers.controller.ts  servers.controller.ts  system.controller.ts
backend/src/api/middleware/: auth.middleware.ts  errorHandler.middleware.ts  rateLimit.middleware.ts
backend/src/services/: auth.service.ts  docker.service.ts  logStreamer.service.ts  serverConnection.service.ts  servers.service.ts  systemStats.service.ts  terminal.service.ts
backend/src/types/: auth.types.ts  container.types.ts  dockerode.d.ts  express.d.ts  server.types.ts  ws.d.ts
backend/src/utils/: config.ts  dockerSocket.ts  http.ts  jwt.util.ts  logger.ts
backend/src/websocket/: handler.ts
backend/tests/: test_auth_service.py  test_http_utils.py  test_main_api.py  test_websocket_api.py
(+58 files in other folders)
